Add server initialization and some file rearrengement

--- a/server_dir/Makefile
+++ b/server_dir/Makefile
@@ -5,7 +5,7 @@
 ## Login   <fauque_j@epitech.net>
 ## 
 ## Started on  Thu Apr 17 16:14:30 2014 Jean Fauquenot
-## Last update Thu Apr 17 16:14:31 2014 Jean Fauquenot
+## Last update Thu Apr 17 20:04:35 2014 Jean Fauquenot
 ##
 
 DEBUG		=	0
@@ -14,11 +14,17 @@ NAME		=	server
 
 BUILD		=	build
 
-SRC		=	main.c \
-			error.c \
-			server.c
-
+SRC		=	main.c
 VPATH		=	src
+
+SRC		+=	error.c
+VPATH		+=	:src/utils
+
+SRC		+=	server.c \
+			init_server.c \
+			init_server_aux.c \
+			destroy_server.c
+VPATH		+=	:src/core
 
 OBJ		=	$(patsubst %.c,$(BUILD)/%.o,$(SRC))
 
