Add client connect handler

--- a/server_dir/Makefile
+++ b/server_dir/Makefile
@@ -5,7 +5,7 @@
 ## Login   <fauque_j@epitech.net>
 ## 
 ## Started on  Thu Apr 17 16:14:30 2014 Jean Fauquenot
-## Last update Fri Apr 18 18:04:07 2014 Jean Fauquenot
+## Last update Sat Apr 19 19:32:43 2014 Jean Fauquenot
 ##
 
 DEBUG		=	0
@@ -13,6 +13,8 @@ DEBUG		=	0
 NAME		=	server
 
 BUILD		=	build
+
+INCLUDES	=	-I./../includes -I src/includes/
 
 SRC		=	main.c
 VPATH		=	src
@@ -29,14 +31,16 @@ SRC		+=	server.c \
 VPATH		+=	:src/core
 
 SRC		+=	handle_fds.c \
-			server_fd.c
+			server_fd.c \
+			add_client.c
 VPATH		+=	:src/core/fds
 
 OBJ		=	$(patsubst %.c,$(BUILD)/%.o,$(SRC))
 
 CC		=	gcc
 
-CFLAGS		=	-W -Wall -I src/includes/
+CFLAGS		=	-W -Wall -Wextra
+CFLAGS		+=	$(INCLUDES)
 ifeq ($(DEBUG), 1)
  CFLAGS		+=	-ggdb3 -D DEBUG
 endif
