Add lexer/parser/execution with some stuff

--- a/server_dir/Makefile
+++ b/server_dir/Makefile
@@ -5,7 +5,7 @@
 ## Login   <fauque_j@epitech.net>
 ## 
 ## Started on  Mon Apr 21 19:48:01 2014 Jean Fauquenot
-## Last update Mon Apr 21 19:48:02 2014 Jean Fauquenot
+## Last update Thu Apr 24 17:23:35 2014 Jean Fauquenot
 ##
 
 DEBUG		=	0
@@ -34,9 +34,37 @@ SRC		+=	handle_fds.c \
 			server_fd.c \
 			add_client.c \
 			remove_client.c \
+			destroy_clients_list.c \
 			handle_fds_clients.c \
-			handle_fds_clients_read.c
+			handle_fds_clients_read.c \
+			handle_fds_clients_write.c
 VPATH		+=	:src/core/fds
+
+SRC		+=	handle_fd_client_read.c \
+			handle_fd_client_write.c \
+			write_to_client.c
+VPATH		+=	:src/read_write
+
+SRC		+=	handle_command.c
+VPATH		+=	:src/commands
+SRC		+=	command_lexer.c \
+			l_message.c \
+			l_prefix.c \
+			l_space.c \
+			l_command.c \
+			l_params.c \
+			l_crlf.c \
+			l_middle.c \
+			l_trailing.c \
+			l_letter.c \
+			l_number.c
+VPATH		+=	:src/commands/lexer
+
+SRC		+=	command_parser.c
+VPATH		+=	:src/commands/parser
+
+SRC		+=	command_execute.c
+VPATH		+=	:src/commands/execute
 
 OBJ		=	$(patsubst %.c,$(BUILD)/%.o,$(SRC))
 
